<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_configuracion"
            android:title="@string/configuracion"
            android:icon="@drawable/ic_build_black_24dp"/>
        <item
            android:id="@+id/switch_item"
            android:icon="@drawable/ic_satellite_black_24dp"
            app:actionLayout="@layout/switch_item"
            android:title="@string/vista_satelite" />

        <item
            android:id="@+id/switch_item_dark"
            android:icon="@drawable/ic_brightness_3_black_24dp"
            app:actionLayout="@layout/switch_item"
            android:title="@string/vista_nocturna" />
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="Otras opciones">
        <menu>
            <item
                android:id="@+id/menu_verPerfil"
                android:title="@string/verPerfil"
                android:icon="@drawable/ic_menu_perfil"/>

            <item
                android:id="@+id/menu_verRanking"
                android:title="@string/ranking_title"
                android:icon="@drawable/ic_poll_black_24dp"/>

            <item
                android:id="@+id/menu_logOut"
                android:title="@string/logOut"
                android:icon="@drawable/ic_keyboard_backspace"/>
            <item
                android:id="@+id/menu_removeUser"
                android:title="@string/removeUser"
                android:icon="@drawable/ic_menu_eliminar"/>
        </menu>
    </item>
</menu>